# clipt

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  README.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  general.yml
.github/PULL_REQUEST_TEMPLATE/: feature.md  fix.md
.github/workflows/: cmake-ci.yml  cmake.yml  documentation.yml  macos.yml  pre-commit.yml  ubuntu.yml  windows.yml
docs/: CONTRIBUTING.md  SECURITY.md
include/: clipti.h  error.h  lexer.h  repl.h  token.h  utils.h
package/: CMakeLists.txt
src/: CMakeLists.txt
src/clipt/interpreter/: CMakeLists.txt  main.c
src/interpreter/: CMakeLists.txt  clipti.c  main.c  repl.c
src/language/: CMakeLists.txt  error.c  lexer.c  token.c  utils.c
tests/: .clang-tidy  CMakeLists.txt  test_error.c  test_lexer.c  test_token.c
